# megakeep

./: .gitignore  .main.py.~undo-tree~  README.md  main.py  pyproject.toml  requirements.txt  setup.py
megakeep/: #megakeep.py#  megakeep.py  parser.py
